--- a/Base/Base.vcxproj
+++ b/Base/Base.vcxproj
@@ -30,6 +30,7 @@
     <ClCompile Include="Source\LoadHmap.cpp" />
     <ClCompile Include="Source\LoadOBJ.cpp" />
     <ClCompile Include="Source\LoadTGA.cpp" />
+    <ClCompile Include="Source\LoS.cpp" />
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\MainMenuController.cpp" />
     <ClCompile Include="Source\MainMenuModel.cpp" />
@@ -39,6 +40,7 @@
     <ClCompile Include="Source\Model.cpp" />
     <ClCompile Include="Source\MouseCharacter.cpp" />
     <ClCompile Include="Source\PlayerCharacter.cpp" />
+    <ClCompile Include="Source\ReadFromText.cpp" />
     <ClCompile Include="Source\shader.cpp" />
     <ClCompile Include="Source\SpriteAnimation.cpp" />
     <ClCompile Include="Source\TileMap.cpp" />
@@ -70,6 +72,7 @@
     <ClInclude Include="Source\LoadHmap.h" />
     <ClInclude Include="Source\LoadOBJ.h" />
     <ClInclude Include="Source\LoadTGA.h" />
+    <ClInclude Include="Source\LoS.h" />
     <ClInclude Include="Source\MainMenuController.h" />
     <ClInclude Include="Source\MainMenuModel.h" />
     <ClInclude Include="Source\MainMenuView.h" />
@@ -80,6 +83,7 @@
     <ClInclude Include="Source\MouseCharacter.h" />
     <ClInclude Include="Source\Object.h" />
     <ClInclude Include="Source\PlayerCharacter.h" />
+    <ClInclude Include="Source\ReadFromText.h" />
     <ClInclude Include="Source\shader.hpp" />
     <ClInclude Include="Source\SpriteAnimation.h" />
     <ClInclude Include="Source\TileMap.h" />
