Added pathfinding for AI

--- a/Base/Base.vcxproj
+++ b/Base/Base.vcxproj
@@ -39,6 +39,7 @@
     <ClCompile Include="Source\MeshBuilder.cpp" />
     <ClCompile Include="Source\Model.cpp" />
     <ClCompile Include="Source\MouseCharacter.cpp" />
+    <ClCompile Include="Source\Pathfinding.cpp" />
     <ClCompile Include="Source\PlayerCharacter.cpp" />
     <ClCompile Include="Source\shader.cpp" />
     <ClCompile Include="Source\SpriteAnimation.cpp" />
@@ -81,6 +82,7 @@
     <ClInclude Include="Source\Model.h" />
     <ClInclude Include="Source\MouseCharacter.h" />
     <ClInclude Include="Source\Object.h" />
+    <ClInclude Include="Source\Pathfinding.h" />
     <ClInclude Include="Source\PlayerCharacter.h" />
     <ClInclude Include="Source\shader.hpp" />
     <ClInclude Include="Source\SpriteAnimation.h" />
