--- a/Base/Base.vcxproj
+++ b/Base/Base.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="Source\Inventory.cpp" />
     <ClCompile Include="Source\InventoryMenu.cpp" />
     <ClCompile Include="Source\Item.cpp" />
+    <ClCompile Include="Source\JSlvl.cpp" />
     <ClCompile Include="Source\LoadHmap.cpp" />
     <ClCompile Include="Source\LoadOBJ.cpp" />
     <ClCompile Include="Source\LoadTGA.cpp" />
@@ -68,6 +69,7 @@
     <ClInclude Include="Source\Inventory.h" />
     <ClInclude Include="Source\InventoryMenu.h" />
     <ClInclude Include="Source\Item.h" />
+    <ClInclude Include="Source\JSLvl.h" />
     <ClInclude Include="Source\Light.h" />
     <ClInclude Include="Source\LoadHmap.h" />
     <ClInclude Include="Source\LoadOBJ.h" />
