--- a/Base/Base.vcxproj.filters
+++ b/Base/Base.vcxproj.filters
@@ -125,6 +125,9 @@
     <ClCompile Include="Source\JSlvl.cpp">
       <Filter>MVC</Filter>
     </ClCompile>
+    <ClCompile Include="Source\jslvl2.cpp">
+      <Filter>MVC</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Geometry.h">
@@ -257,6 +260,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\JSLvl.h">
+      <Filter>MVC</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\jslvl2.h">
       <Filter>MVC</Filter>
     </ClInclude>
   </ItemGroup>
