--- a/Base/Base.vcxproj
+++ b/Base/Base.vcxproj
@@ -41,19 +41,20 @@
     <ClCompile Include="Source\MeshBuilder.cpp" />
     <ClCompile Include="Source\Model.cpp" />
     <ClCompile Include="Source\MouseCharacter.cpp" />
+    <ClCompile Include="Source\NDLvl.cpp" />
     <ClCompile Include="Source\Pathfinding.cpp" />
     <ClCompile Include="Source\PlayerCharacter.cpp" />
     <ClCompile Include="Source\ReadFromText.cpp" />
     <ClCompile Include="Source\shader.cpp" />
     <ClCompile Include="Source\SpriteAnimation.cpp" />
     <ClCompile Include="Source\TileMap.cpp" />
+    <ClCompile Include="Source\TutLvl3.cpp" />
+    <ClCompile Include="Source\TutLvl2.cpp" />
     <ClCompile Include="Source\Utility.cpp" />
     <ClCompile Include="Source\View.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MainMenuController.h" />
-    <ClInclude Include="MainMenuModel.h" />
-    <ClInclude Include="MainMenuView.h" />
+    <ClInclude Include="NDLvl.h" />
     <ClInclude Include="Source\AI.h" />
     <ClInclude Include="Source\Camera.h" />
     <ClInclude Include="Source\Camera3.h" />
@@ -86,6 +87,7 @@
     <ClInclude Include="Source\MeshBuilder.h" />
     <ClInclude Include="Source\Model.h" />
     <ClInclude Include="Source\MouseCharacter.h" />
+    <ClInclude Include="Source\NDLvl.h" />
     <ClInclude Include="Source\Object.h" />
     <ClInclude Include="Source\Pathfinding.h" />
     <ClInclude Include="Source\PlayerCharacter.h" />
@@ -93,6 +95,8 @@
     <ClInclude Include="Source\shader.hpp" />
     <ClInclude Include="Source\SpriteAnimation.h" />
     <ClInclude Include="Source\TileMap.h" />
+    <ClInclude Include="Source\TutLvl2.h" />
+    <ClInclude Include="Source\TutLvl3.h" />
     <ClInclude Include="Source\Utility.h" />
     <ClInclude Include="Source\Vertex.h" />
     <ClInclude Include="Source\View.h" />
