--- a/Base/Base.vcxproj
+++ b/Base/Base.vcxproj
@@ -47,6 +47,7 @@
     <ClCompile Include="Source\ReadFromText.cpp" />
     <ClCompile Include="Source\shader.cpp" />
     <ClCompile Include="Source\SpriteAnimation.cpp" />
+    <ClCompile Include="Source\StoryModel1.cpp" />
     <ClCompile Include="Source\TileMap.cpp" />
     <ClCompile Include="Source\TutLvl3.cpp" />
     <ClCompile Include="Source\TutLvl2.cpp" />
@@ -93,6 +94,7 @@
     <ClInclude Include="Source\ReadFromText.h" />
     <ClInclude Include="Source\shader.hpp" />
     <ClInclude Include="Source\SpriteAnimation.h" />
+    <ClInclude Include="Source\StoryModel1.h" />
     <ClInclude Include="Source\TileMap.h" />
     <ClInclude Include="Source\TutLvl2.h" />
     <ClInclude Include="Source\TutLvl3.h" />
