--- a/Base/Base.vcxproj.filters
+++ b/Base/Base.vcxproj.filters
@@ -134,6 +134,15 @@
     <ClCompile Include="Source\StoryModel1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\TutLvl2.cpp">
+      <Filter>MVC</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\TutLvl3.cpp">
+      <Filter>MVC</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\NDLvl.cpp">
+      <Filter>MVC</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Geometry.h">
@@ -217,15 +226,6 @@
     <ClInclude Include="Source\GameModelLevel2.h">
       <Filter>MVC</Filter>
     </ClInclude>
-    <ClInclude Include="MainMenuModel.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="MainMenuController.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="MainMenuView.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Source\MainMenuController.h">
       <Filter>MVC</Filter>
     </ClInclude>
@@ -276,6 +276,15 @@
     </ClInclude>
     <ClInclude Include="Source\StoryModel1.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\TutLvl2.h">
+      <Filter>MVC</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\TutLvl3.h">
+      <Filter>MVC</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\NDLvl.h">
+      <Filter>MVC</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
